# AgentSphere-MCP-Servers

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  docker-compose.yml  license  readme.md
news-api-mcp-server/: .dockerignore  .env.example  .gitignore  dockerfile  pyproject.toml  readme.md
news-api-mcp-server/src/news_api_mcp_server/: __init__.py  server.py
news-api-mcp-server/src/news_api_mcp_server/tools/: __init__.py  headlines_tool.py  news_tool.py
news-api-mcp-server/src/news_api_mcp_server/utils/: logger.py
open-weather-mcp-server/: .env.example  dockerfile  pyproject.toml  readme.md
open-weather-mcp-server/src/open_weather_mcp_server/: __init__.py  health.py  server.py
open-weather-mcp-server/src/open_weather_mcp_server/tools/: __init__.py  current_air_pollution_tool.py  current_weather_tool.py  daily_forecast_tool.py  forecast_air_pollution_tool.py  hourly_forecast_tool.py
serpapi-google-mcp-server/: .env.example  dockerfile  pyproject.toml  readme.md
serpapi-google-mcp-server/src/serpapi_google_mcp_server/: __init__.py  server.py
serpapi-google-mcp-server/src/serpapi_google_mcp_server/tools/: __init__.py  events_tool.py  finance_tool.py  flights_tool.py  hotels_tool.py  jobs_tool.py  places_tool.py  shopping_tool.py
serpapi-google-mcp-server/src/serpapi_google_mcp_server/utils/: logger.py
